WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84850
MediaStream API: Changing webkitGetUserMedia to take an object instead of a string
https://bugs.webkit.org/show_bug.cgi?id=84850
Summary
MediaStream API: Changing webkitGetUserMedia to take an object instead of a s...
Tommy Widenflycht
Reported
2012-04-25 05:28:48 PDT
The standard changed a while back to use an object as a dictionary but since JSC didn't support the Dictionary class until just recently we have not updated the API until now.
Attachments
Patch
(38.38 KB, patch)
2012-04-25 05:36 PDT
,
Tommy Widenflycht
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-03
(6.37 MB, application/zip)
2012-04-25 12:40 PDT
,
WebKit Review Bot
no flags
Details
Patch
(37.99 KB, patch)
2012-04-26 02:29 PDT
,
Tommy Widenflycht
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tommy Widenflycht
Comment 1
2012-04-25 05:36:05 PDT
Created
attachment 138790
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-25 05:39:12 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
WebKit Review Bot
Comment 3
2012-04-25 12:40:09 PDT
Comment on
attachment 138790
[details]
Patch
Attachment 138790
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12524804
New failing tests: fast/mediastream/peerconnection-Attributes.html
WebKit Review Bot
Comment 4
2012-04-25 12:40:15 PDT
Created
attachment 138858
[details]
Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Tommy Widenflycht
Comment 5
2012-04-26 02:29:03 PDT
Created
attachment 138959
[details]
Patch
WebKit Review Bot
Comment 6
2012-05-02 03:31:12 PDT
Comment on
attachment 138959
[details]
Patch Clearing flags on attachment: 138959 Committed
r115810
: <
http://trac.webkit.org/changeset/115810
>
WebKit Review Bot
Comment 7
2012-05-02 03:31:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug