MediaStream API: Changing webkitGetUserMedia to take an object instead of a string https://bugs.webkit.org/show_bug.cgi?id=84850

Reviewed by Dimitri Glazkov.

Source/WebCore:

The standard changed a while back to use an object as a dictionary but since JSC
didn't support the Dictionary class until just recently we have not updated the API until now.

Change covered by existing, and edited, tests.

* Modules/mediastream/NavigatorMediaStream.cpp:
(WebCore::NavigatorMediaStream::webkitGetUserMedia):
* Modules/mediastream/NavigatorMediaStream.h:
(WebCore):
(NavigatorMediaStream):
* Modules/mediastream/NavigatorMediaStream.idl:
* Modules/mediastream/UserMediaRequest.cpp:
(WebCore::UserMediaRequest::create):
(WebCore::UserMediaRequest::UserMediaRequest):
* Modules/mediastream/UserMediaRequest.h:
(WebCore):
(UserMediaRequest):
* platform/mediastream/MediaStreamSourcesQueryClient.h:
(MediaStreamSourcesQueryClient):

Source/WebKit/chromium:

* public/WebUserMediaRequest.h:
(WebUserMediaRequest):
* src/WebUserMediaRequest.cpp:

LayoutTests:

Also took the opportunity to update the peerconnection-Attributes test
to test PeerConnection00 instead.

* fast/mediastream/argument-types-expected.txt:
* fast/mediastream/peerconnection-Attributes-expected.txt:
* fast/mediastream/script-tests/argument-types.js:
(emptyFunction):
* fast/mediastream/script-tests/peerconnection-Attributes.js:
* platform/chromium/media/video-capture-preview.html:


Canonical link: https://commits.webkit.org/102893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115810 268f45cc-cd09-0410-ab3c-d52691b4dbfc